# smartkinect

./: .main.cpp.swp  CMakeLists.txt  KinectFeed.cpp  KinectFeed.h  README.md  install.sh  main.cpp
include/ni2/Driver/: OniDriverTypes.h
openni2_libfreenect2_drivers/: libFreenectDriver.dylib  libfreenect2-openni2.0.dylib  libfreenect2-openni2.dylib  libfreenect2.0.2.dylib
